generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("NEXT_PUBLIC_DATABASE_URL")
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model User {
  id            String    @id @default(cuid())
  name          String?
  email         String?   @unique
  emailVerified DateTime?
  image         String?
  accounts      Account[]
  sessions      Session[]
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model categoria {
  id              Int       @id @default(autoincrement())
  name            String?   @db.VarChar(255)
  descrizione     String?
  opzionefiltrata Json?
  created_at      DateTime? @db.Timestamp(6)
  updated_at      DateTime? @db.Timestamp(6)
  published_at    DateTime? @db.Timestamp(6)
  created_by_id   Int?
  updated_by_id   Int?

  @@index([created_by_id], map: "categorias_created_by_id_fk")
  @@index([updated_by_id], map: "categorias_updated_by_id_fk")
}

model colore {
  id     Int      @id @default(autoincrement())
  purple Boolean?
  red    Boolean?
  orange Boolean?
  yellow Boolean?
  black  Boolean?
  white  Boolean?
  pink   Boolean?
  blue   Boolean?
  sky    Boolean?
  teal   Boolean?
  green  Boolean?
  gray   Boolean?
}

model taglia {
  id   Int      @id @default(autoincrement())
  xxs  Boolean?
  xs   Boolean?
  s    Boolean?
  m    Boolean?
  l    Boolean?
  xl   Boolean?
  xxl  Boolean?
  xxxl Boolean?
}

model files {
  id                Int       @id @default(autoincrement())
  name              String?   @db.VarChar(255)
  alternative_text  String?   @db.VarChar(255)
  caption           String?   @db.VarChar(255)
  width             Int?
  height            Int?
  formats           Json?
  hash              String?   @db.VarChar(255)
  ext               String?   @db.VarChar(255)
  mime              String?   @db.VarChar(255)
  size              Decimal?  @db.Decimal(10, 2)
  url               String?   @db.VarChar(255)
  preview_url       String?   @db.VarChar(255)
  provider          String?   @db.VarChar(255)
  provider_metadata Json?
  created_at        DateTime? @db.Timestamp(6)
  updated_at        DateTime? @db.Timestamp(6)
  created_by_id     Int?
  updated_by_id     Int?

  @@index([created_by_id], map: "files_created_by_id_fk")
  @@index([updated_by_id], map: "files_updated_by_id_fk")
}

model prodotto {
  id            Int       @id @default(autoincrement())
  quantity      Int?
  price         Decimal?  @db.Decimal(10, 2)
  design        String?
  materiale     String?
  misure        String?
  name          String?   @db.VarChar(255)
  descrizione   String?
  currency      String?   @db.VarChar(255)
  slug          String?   @unique(map: "variantetaglias_slug_unique") @db.VarChar(255)
  created_at    DateTime? @db.Timestamp(6)
  updated_at    DateTime? @db.Timestamp(6)
  published_at  DateTime? @db.Timestamp(6)
  created_by_id Int?
  updated_by_id Int?

  @@index([created_by_id], map: "variantetaglias_created_by_id_fk")
  @@index([updated_by_id], map: "variantetaglias_updated_by_id_fk")
}
